alignment fixture in footer

--- a/components/common/Footer.module.scss
+++ b/components/common/Footer.module.scss
@@ -52,7 +52,7 @@
 
     .touchContainer {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       gap: 10px;
       padding-bottom: 6px;
     }
